[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_dev"
version = "0.1.19"
description = "A agent dev backend package"
readme = "README.md"
authors = [
    { name = "Frank", email = "frank@wavephix.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "feedparser",
    "openai",
    "redis",
    "boto3"
]

[project.urls]
Homepage = "https://github.com/frankkk96/agent-dev"
Repository = "https://github.com/frankkk96/agent-dev.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_dev*"] 